@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 706d83df61ff623dc376d7c594bf430e99ab107f ChangeLog
+SHA1 74fb345cb25ff04410c8344a4562ca8a3cea27f2 ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 076b96a40ee3e10d1bee150578c53821e00014c0 MANIFEST
-SHA1 b219270cd52da178cb908c8f55e1ff78d4101c6e META.yml
-SHA1 c39ca0241c6dd84348377602b6553cce1cb4d501 Makefile.PL
+SHA1 1dd6a783cf1cf0589de4797b77111d1cc7494676 META.yml
+SHA1 53766bc495a38d56d935062958c40ec14d3092f7 Makefile.PL
 SHA1 fd7990a8a2e6a3211e92195eea930d61fb490eaa README
 SHA1 56058fc8d72a96f1cb02917fdf636c1abb94e51d bin/fullauto.pl
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -33,7 +33,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 ac5dc6ed6f3a141fa17566d16d03bc7ec286c624 lib/Net/FullAuto.pm
+SHA1 2f6906646f630438eea3ddaaec1208bbe54ae635 lib/Net/FullAuto.pm
 SHA1 5ff6ce13b0ff87967726e71d0ef53ba0b3884ba7 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 1c547d9c70bbd223abf6d28018ca47076501063a lib/Net/FullAuto/Custom/README
 SHA1 11062399629ac5a8c01071ec2c876c79091f2482 lib/Net/FullAuto/Distro/fa_code.pm
@@ -47,7 +47,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAkzqhvUACgkQdsVAdUjO9IkyegCfQjLhMzZaypl3FFK+RA4Xj+DG
-VWwAnRC4QabCSfSJwUxc5RDepP1pjngd
-=r6zz
+iEYEARECAAYFAkztZOoACgkQdsVAdUjO9IktCACeIvplaRxujXZsnnfH6k9pH6yf
+rcEAniXYh/fWRElglhlZu++TwGW99Oou
+=KMZy
 -----END PGP SIGNATURE-----
