@@ -34,7 +34,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.66';
+our $VERSION='0.67';
 
 
 use 5.005;
